--- a/frontend/src/app/login/login.html
+++ b/frontend/src/app/login/login.html
@@ -1,7 +1,52 @@
-<h2>Iniciar sesión</h2>
-<form (ngSubmit)="login()" #loginForm="ngForm">
-  <input type="text" name="username" [(ngModel)]="username" placeholder="Usuario" required>
-  <input type="password" name="password" [(ngModel)]="password" placeholder="Contraseña" required>
-  <button type="submit">Entrar</button>
-  <p *ngIf="error" style="color: red;">{{ error }}</p>
-</form>
+<div class="flex items-center justify-center h-screen">
+  <div class="min-w-fit flex-col border bg-white px-6 py-14 shadow-md rounded-[4px] w-[360px]">
+
+    <div class="mb-8 flex justify-center">
+      <img class="w-24" src="" alt="Logo" />
+    </div>
+
+    <form (ngSubmit)="login()" #loginForm="ngForm" class="flex flex-col text-sm rounded-md space-y-4">
+      <input
+        class="rounded-[4px] border p-3 hover:outline-none focus:outline-none hover:border-yellow-500"
+        type="text"
+        name="username"
+        [(ngModel)]="username"
+        placeholder="Username or Email"
+        required
+      />
+
+      <input
+        class="rounded-[4px] border p-3 hover:outline-none focus:outline-none hover:border-yellow-500"
+        type="password"
+        name="password"
+        [(ngModel)]="password"
+        placeholder="Password"
+        required
+      />
+
+      <button
+        class="w-full border p-2 bg-gradient-to-r from-gray-800 bg-gray-500 text-white rounded-[4px] hover:bg-slate-400 scale-105 duration-300"
+        type="submit"
+        [disabled]="!loginForm.valid"
+      >
+        Sign in
+      </button>
+
+      <p *ngIf="error" class="text-red-500 text-sm mt-2 text-center">{{ error }}</p>
+    </form>
+
+    <div class="mt-5 flex justify-between text-sm text-gray-600">
+      <a href="#">Forgot password?</a>
+      <a href="#">Sign up</a>
+    </div>
+
+    <div class="flex justify-center mt-5 text-sm">
+      <p class="text-gray-400">or you can sign with</p>
+    </div>
+
+    <div class="mt-5 flex justify-center gap-3">
+
+    </div>
+
+  </div>
+</div>
