Actualizando la redirección del formulario de login a register

--- a/frontend/src/app/login/login.html
+++ b/frontend/src/app/login/login.html
@@ -37,7 +37,7 @@
 
     <div class="mt-5 flex justify-between text-sm text-gray-600">
       <a href="#">Forgot password?</a>
-      <a href="#">Sign up</a>
+      <a href="/register">Sign up</a>
     </div>
 
     <div class="flex justify-center mt-5 text-sm">
