--- a/frontend/src/app/login/login.html
+++ b/frontend/src/app/login/login.html
@@ -1,11 +1,16 @@
 <div class="flex items-center justify-center h-screen">
-  <div class="min-w-fit flex-col border bg-white px-6 py-14 shadow-md rounded-[4px] w-[360px]">
-
+  <div
+    class="min-w-fit flex-col border bg-white px-6 py-14 shadow-md rounded-[4px] w-[360px]"
+  >
     <div class="mb-8 flex justify-center">
-      <img class="w-24" src="" alt="Logo" />
+      <img class="w-24" src="restoLogo.svg" alt="Logo" />
     </div>
 
-    <form (ngSubmit)="login()" #loginForm="ngForm" class="flex flex-col text-sm rounded-md space-y-4">
+    <form
+      (ngSubmit)="login()"
+      #loginForm="ngForm"
+      class="flex flex-col text-sm rounded-md space-y-4"
+    >
       <input
         class="rounded-[4px] border p-3 hover:outline-none focus:outline-none hover:border-yellow-500"
         type="text"
@@ -32,7 +37,9 @@
         Sign in
       </button>
 
-      <p *ngIf="error" class="text-red-500 text-sm mt-2 text-center">{{ error }}</p>
+      <p *ngIf="error" class="text-red-500 text-sm mt-2 text-center">
+        {{ error }}
+      </p>
     </form>
 
     <div class="mt-5 flex justify-between text-sm text-gray-600">
@@ -44,9 +51,6 @@
       <p class="text-gray-400">or you can sign with</p>
     </div>
 
-    <div class="mt-5 flex justify-center gap-3">
-
-    </div>
-
+    <div class="mt-5 flex justify-center gap-3"></div>
   </div>
 </div>
