--- a/frontend/src/app/login/login.html
+++ b/frontend/src/app/login/login.html
@@ -12,7 +12,7 @@
       class="flex flex-col text-sm rounded-md space-y-4"
     >
       <input
-        class="rounded-[4px] border p-3 hover:outline-none focus:outline-none hover:border-yellow-500"
+        class="rounded-[4px] border p-3 hover:outline-none focus:outline-none hover:border-yellow-500 duration-500"
         type="text"
         name="username"
         [(ngModel)]="username"
@@ -21,7 +21,7 @@
       />
 
       <input
-        class="rounded-[4px] border p-3 hover:outline-none focus:outline-none hover:border-yellow-500"
+        class="rounded-[4px] border p-3 hover:outline-none focus:outline-none hover:border-yellow-500 duration-500"
         type="password"
         name="password"
         [(ngModel)]="password"
