cambiando la estructura para usar un solo css

--- a/frontend/src/app/restaurante-panel/restaurante-panel.html
+++ b/frontend/src/app/restaurante-panel/restaurante-panel.html
@@ -1,21 +1,17 @@
+<link rel="stylesheet" href="/frontend/src/styles.css">
+
 <div class="contenedor-principal">
-
   <div class="restaurante-panel">
-
-    <!-- Encabezado editable -->
     <h2>Nombre del Restaurante</h2>
-    <input type="text" [(ngModel)]="nombreRestaurante" placeholder="Ingrese el nombre del restaurante" />
+    <input type="text" class="input" [(ngModel)]="nombreRestaurante" placeholder="Ingrese el nombre del restaurante" />
 
     <hr />
 
-    <!-- Opciones del panel -->
     <div class="opciones-panel">
-      <button>Ingresar Menú de hoy</button>
-      <button>Editar Menú de hoy</button>
-      <button>Pedidos de hoy</button>
-      <button>Historial</button>
+      <button (click)="irACrearMenu()" class="btn">Ingresar Menú de hoy</button>
+      <button class="btn">Editar Menú de hoy</button>
+      <button class="btn">Pedidos de hoy</button>
+      <button class="btn">Historial</button>
     </div>
-
   </div>
-
 </div>
