--- a/frontend/src/app/login/login.html
+++ b/frontend/src/app/login/login.html
@@ -1,52 +1,23 @@
-<div class="flex items-center justify-center h-screen">
-  <div class="min-w-fit flex-col border bg-white px-6 py-14 shadow-md rounded-[4px] w-[360px]">
+<link rel="stylesheet" href="/frontend/src/styles.css">
 
-    <div class="mb-8 flex justify-center">
-      <img class="w-24" src="" alt="Logo" />
-    </div>
+<div class="form-container">
+  <div class="form-box">
+    <img src="logo.png" alt="Logo" class="logo" />
 
-    <form (ngSubmit)="login()" #loginForm="ngForm" class="flex flex-col text-sm rounded-md space-y-4">
-      <input
-        class="rounded-[4px] border p-3 hover:outline-none focus:outline-none hover:border-yellow-500"
-        type="text"
-        name="username"
-        [(ngModel)]="username"
-        placeholder="Username or Email"
-        required
-      />
+    <form class="formulario" (ngSubmit)="login()" #loginForm="ngForm">
+      <h1>Iniciar Sesión</h1>
 
-      <input
-        class="rounded-[4px] border p-3 hover:outline-none focus:outline-none hover:border-yellow-500"
-        type="password"
-        name="password"
-        [(ngModel)]="password"
-        placeholder="Password"
-        required
-      />
+      <input class="input" type="text" name="username" [(ngModel)]="username" placeholder="Username o Email" required />
+      <input class="input" type="password" name="password" [(ngModel)]="password" placeholder="Password" required />
 
-      <button
-        class="w-full border p-2 bg-gradient-to-r from-gray-800 bg-gray-500 text-white rounded-[4px] hover:bg-slate-400 scale-105 duration-300"
-        type="submit"
-        [disabled]="!loginForm.valid"
-      >
-        Sign in
-      </button>
+      <button class="btn" type="submit" [disabled]="!loginForm.valid">Sign in</button>
 
-      <p *ngIf="error" class="text-red-500 text-sm mt-2 text-center">{{ error }}</p>
+      <p *ngIf="error" class="error-message">{{ error }}</p>
     </form>
 
     <div class="mt-5 flex justify-between text-sm text-gray-600">
-      <a href="#">Forgot password?</a>
-      <a href="/register">Sign up</a>
+      <a href="#">¿Olvidaste tu contraseña?</a>
+      <a href="/register">Regístrate</a>
     </div>
-
-    <div class="flex justify-center mt-5 text-sm">
-      <p class="text-gray-400">or you can sign with</p>
-    </div>
-
-    <div class="mt-5 flex justify-center gap-3">
-
-    </div>
-
   </div>
 </div>
